Fixed size on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
     background: url("/images/background.png") no-repeat center fixed;
     background-size: contain;
     font-family: "Times New Roman", Times, serif;
-    font-size: medium;
+    font-size: 16px;
 }
 
 input, select {
